feat: add authentication
Also remove extension/matrix mapping: it's now automatic after auth
